# untitled-platformer

./: CMakeLists.txt
res/shaders/: blit.wgsl  sprite.wgsl
src/: files.c  files.h  main.c  types.h
src/render/: blit_to_screen.c  blit_to_screen.h  buffers.c  buffers.h  commands.c  commands.h  pipelines.c  pipelines.h  render.c  render.h  render_context.h  render_imp.h  resources.c  resources.h  sprite_renderer.c  sprite_renderer.h  textures.c  textures.h  tilemap_renderer.c  tilemap_renderer.h  util.c  util.h  wgpu.c  wgpu.h
